--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "watch": "encore dev --watch",
     "build": "encore production"
   },
-  "dependencies": {}
+  "dependencies": {
+    "event-source-polyfill": "^1.0.31"
+  }
 }
