--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,6 @@
         "symfony/http-foundation": "^5.4|^6.0",
         "symfony/http-kernel": "^5.4|^6.0",
         "symfony/intl": "^5.4|^6.0",
-        "symfony/mercure": "^0.6.3",
         "symfony/property-access": "^5.4|^6.0",
         "symfony/security-bundle": "^5.4|^6.0",
         "symfony/string": "^5.4|^6.0",
@@ -37,6 +36,9 @@
         "symfony/twig-bundle": "^5.4|^6.0",
         "symfony/uid": "^5.4|^6.0",
         "symfony/validator": "^5.4|^6.0"
+    },
+    "suggest": {
+        "symfony/mercure": "^0.6.3"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
