--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "symfony/browser-kit": "^5.4|^6.0",
         "symfony/css-selector": "^5.4|^6.0",
         "symfony/dom-crawler": "^5.4|^6.0",
+        "symfony/mercure": "^0.6.3",
         "symfony/phpunit-bridge": "^5.4|^6.0"
     },
     "config": {
