--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "symfony/validator": "^5.4|^6.0"
     },
     "suggest": {
-        "symfony/mercure": "^0.6.3"
+        "symfony/mercure-bundle": "To enable live updates support"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
